k8s/cases-sigap/k8s/01-sigap-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sigap
  labels:
    app: sigap
