k8s/cases-sigap/k8s/03-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sigap-db-sts
  namespace: sigap
  labels:
    app: sigap-db
    app-name: sigap
    tier: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sigap-db
      app-name: sigap
      tier: database
  serviceName: sigap-db-service
  template:
    metadata:
      name: sigap-db-pod
      labels:
        app: sigap-db
        app-name: sigap
        tier: database
    spec:
      containers:
        - name: sigap-db-container
          image: postgres:12
  volumeClaimTemplates:
    - metadata:
        name: sigap-db-pvc
        labels:
          app: sigap-db
          app-name: sigap
          tier: database
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
