k8s/cases-sigap/k8s/05-backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sigap-backend-deploy
  namespace: sigap
  labels:
    app: sigap-backend-deploy
    app-name: sigap
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sigap-backend-deploy
      app-name: sigap
      tier: backend
  template:

    metadata:
      name: sigap-backend-deploy
      labels:
        app: sigap-backend-deploy
        app-name: sigap
        tier: backend
    spec:
      imagePullSecrets:
        - name: github-docker-caisff
      containers:
        - name: sigap-backend-container
          image: ghcr.io/caisff/sigap
#          image: warsic/sigap
#          image: ccr.mef/caisff/sigap
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
