k8s/cases-sigap/k8s/04-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sigap-db-service
  namespace: sigap
  labels:
    app: sigap-db-service
    tier: database
    app-name: sigap
spec:
  selector:
    app: sigap-db
    app-name: sigap
    tier: database
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
