k8s/cases-sigap/k8s/07-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sigap-ingress
  namespace: sigap
  labels:
    app: sigap-ingress
    app-name: sigap
    tier: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: loga-letsencrypt-issuer
spec:
  tls:
    - hosts:
        - sigap.loga-apps.com
      secretName: sigap-ingress-letsencrypt-ingress-secret
  rules:
    - host: sigap.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sigap-backend-service
                port:
                  number: 80

    - host: sigap.loga-apps.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sigap-backend-service
                port:
                  number: 80
